<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="430dp"
    android:background="@drawable/dialogback"
    android:padding="5dp"

    android:layout_gravity="center">

    <TextView
        android:id="@+id/closeid"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="#000000"
        android:text="@string/x"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        android:background="@drawable/circlebackground"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:contentDescription="TODO" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aratisangrahalay"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/version_1_0"
        android:layout_marginTop="05dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/this_app_useful_for_reading_the_arati_for_ganpati_festival_all_others"
        android:textColor="#131212"

        />
    <TextView
        android:id="@+id/tot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tutorial"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorAccent"
        />
    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rate_this_app"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorAccent"
        />



</LinearLayout>