<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="05dp"
            >
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_brightness_4_black_24dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nightmode"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginStart="30sp"/>

        <ToggleButton
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="100dp" />


    </LinearLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FF4E4A4A"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/otherapps"
            android:layout_gravity="center"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/other_apps"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginStart="30sp"/>

    </LinearLayout>
    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FF4E4A4A" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:onClick="btnclick"

        >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/about"
            android:layout_gravity="center"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginStart="30sp"/>


    </LinearLayout>
    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FF4E4A4A" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/star"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rate_this_app"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginStart="30sp"/>
    </LinearLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#4E4A4A" />


</LinearLayout>